Adjusted css to correct overflow and corrected missing image on oliver html file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,8 @@ footer {
 .icon-header h1 {
     font-family: 'Playfair Display', sans-serif;
     color: #001F3F;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
+    margin: 0px;
 }
 
 .icon-header small {
